# qt6_test

./: .gitignore  CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
